--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "yajb-js": "^0.1.0"
   },
   "devDependencies": {
+    "extract-text-webpack-plugin": "^1.0.1",
     "vue": "^2.0.5",
     "vue-loader": "^11.0.0",
     "vue-template-compiler": "^2.1.10",
